--- a/cModelTweak/cModelTweak.csproj
+++ b/cModelTweak/cModelTweak.csproj
@@ -48,6 +48,15 @@
     <WarningLevel>2</WarningLevel>
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'TabDebug|AnyCPU'">
+    <OutputPath>bin\TabDebug\</OutputPath>
+    <Optimize>true</Optimize>
+    <WarningLevel>2</WarningLevel>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>none</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
